# iitr-vpn-tui

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  MAINTENANCE.md  README.md  SECURITY.md
.github/workflows/: ci.yml
docs/: IDEAS.md  REVERSE_ENGINEERING.md  TROUBLESHOOTING.md
src/: app.rs  config.rs  main.rs  ui.rs  vpn.rs
